--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,10 +79,17 @@
   }
 }
 
-html{
-  scrollbar-gutter: stable;
-}
-
 body{
   min-height: 100vh;
+}
+
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
